Fixed parallelshell cwd error. Updated styles.

--- a/index.html
+++ b/index.html
@@ -75,11 +75,13 @@
     <section id="about" class="about-section">
         <div class="container">
             <div class="row">
+                <div class="col-12 section-title">
+                    <h2 class="text-center">Get to know me</h2>
+                </div>
                 <div class="col-md-10 mx-auto">
-                    <h2 class="text-center mb-4">Get to know me</h2>
                     <div class="text-left">
-                        <p>A budding Web Designer, aspiring Design Technologist (or [ insert your term for design-development mediator here ]) and future Artificial Intelligence / Machine Learning Engineer.</p>
-                        <p> I started off pursuing graphic and game design, decided to try a different approach and found myself (double entendre) in mechanical engineering which finally led me to discovering my <span class="strike-that">obsession</span> love for machine learning and artificial intelligence.</p>
+                        <p class="mb-3">A budding Web Designer, aspiring Design Technologist (or [ insert your term for design-development mediator here ]) and future Artificial Intelligence / Machine Learning Engineer.</p>
+                        <p class="mb-3"> I started off pursuing graphic and game design, decided to try a different approach and found myself (double entendre) in mechanical engineering which finally led me to discovering my <span class="strike-that">obsession</span> love for machine learning and artificial intelligence.</p>
                         <p>I take pride in a nuanced understanding of the human psyche, respectable design skills, a passion for creation and innovation and above all else, <strong>kindness</strong> to fellow inhabitants of Earth.</p>
                     </div>
                 </div>
@@ -91,6 +93,11 @@
     <section id="experience" class="experience-section bg-light">
         <div class="container">
             <!-- Work Expereince -->
+            <div class="row">
+                <div class="col-12 section-title">
+                    <h1 class="text-center">Experience</h1>
+                </div>
+            </div>
             <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
                 <div class="resume-content col-md-8">
                     <h3 class="mb-0">Technician II</h3>
@@ -147,7 +154,7 @@
         <div class="container">
 
             <div class="row">
-                <div class="col-12 mb-5">
+                <div class="col-12 section-title">
                     <h1 class="text-center">Education</h1>
                 </div>
             </div>
@@ -190,9 +197,10 @@
     <section id="skills" class="skills-section bg-light">
         <div class="container">
             <div class="row">
+                <div class="col-12 section-title">
+                    <h1 class="text-center">Skills</h1>
+                </div>
                 <div class="col-md-10 mx-auto">
-                    <h1 class="text-center mb-5">Skills</h1>
-
                     <div class="subheading mb-3">
                         Programming Languages &amp; Tools
                     </div>
@@ -206,14 +214,14 @@
                         <li class="list-inline-item">
                             <i title="JavaScript" class="fab fa-js-square"></i>
                         </li>
+                        <li class="list-inline-item">
+                            <i title="NPM" class="fab fa-npm"></i>
+                        </li>
                         <!--
                         <li class="list-inline-item">
                             <i class="fab fa-angular"></i>
                         </li>
                         -->
-                        <li class="list-inline-item">
-                            <i title="React" class="fab fa-react"></i>
-                        </li>
                         <li class="list-inline-item">
                             <i title="Node.js" class="fab fa-node-js"></i>
                         </li>
@@ -229,7 +237,7 @@
                         </li>
                         -->
                         <li class="list-inline-item">
-                            <i title="NPM" class="fab fa-npm"></i>
+                            <i title="React" class="fab fa-react"></i>
                         </li>
                         <li class="list-inline-item">
                             <i title="Gulp" class="fab fa-gulp"></i>
@@ -262,9 +270,10 @@
     <section id="interests" class="interests-section">
         <div class="container">
             <div class="row">
-
+                <div class="col-12 section-title">
+                    <h1 class="text-center">Interests</h1>
+                </div>
                 <div class="mx-auto col-8 col-md-10 text-center">
-                    <h1 class="mb-5">Interests</h1>
                    <!-- Row 1 -->
                     <i class="fas fa-hiking" title="Hiking"></i>
                     <i class="fas fa-snowboarding" title="Snowboarding"></i>
