--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="container d-flex h-100 align-items-center">
             <div class="row">
                 <div class="mx-auto text-center col-12">
-                    <h1 class="mx-auto my-0 text-uppercase">Tihani Celeketic</h1>
+                    <h1 class="mx-auto text-uppercase">Tihani Celeketic</h1>
                 </div>
                 <div class="col-12"><p><br></p></div>
                 <div class="mx-auto text-center">
