Added certificates to education section. Updated color for description and flavor text.

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         <span class="text-primary">October 2018 - Present</span>
                     </div>
                     <div class="mt-3">
-                        <p>Experienced using various tools and programs to update / troubleshoot firmware and perform physical repairs and upgrades to a fleet of 5000+ electric mobility devices.</p>
+                        <p class=" flav-text">Experienced using various tools and programs to update / troubleshoot firmware and perform physical repairs and upgrades to a fleet of 5000+ electric mobility devices.</p>
                     </div>
                 </div>
                 <div class="resume-date text-md-right d-none d-md-block">
@@ -122,7 +122,7 @@
                         <span class="text-primary">March 2018 - September 2018</span>
                     </div>
                     <div class="mt-3">
-                        <p>Head teller of main branch experienced in leveraging account and document management programs.</p>
+                        <p class="flav-text">Head teller of main branch experienced in leveraging account and document management programs.</p>
                     </div>
                 </div>
                 <div class="resume-date text-md-right d-none d-md-block">
@@ -137,7 +137,7 @@
                     <div class="text-md-right d-block d-md-none">
                         <span class="text-primary">March 2017 - April 2018</span>
                     </div>
-                    <div class="mt-3">
+                    <div class="mt-3 flav-text">
                         <p>One woman administration that leveraged a suite of software as well as superb organizational and communication skills to help this boutique photography studio flourish.</p>
                     </div>
                 </div>
@@ -166,7 +166,7 @@
                     <div class="text-md-right d-block d-md-none">
                         <span class="text-primary">October 2019 - Present</span>
                     </div>
-                    <div class="mt-3">
+                    <div class="mt-3 flav-text">
                         <p>Computer Science - Machine Learning and Artifical Intelligence Specialisation
                         <br>Distance Learning Programme</p>
                     </div>
@@ -187,6 +187,34 @@
                 </div>
                 <div class="resume-date text-md-left d-none d-md-block">
                     <span class="text-primary">August 2006 - July 2007</span>
+                </div>
+            </div>
+
+            <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="resume-content col-md-8 order-md-last">
+                    <h3 class="mb-0">Front-End Web UI Frameworks and Tools</h3>
+                    <div class="subheading">Coursera &middot; The Hong Kong University of Science and Technology</div>
+                    <div class="resume-date text-md-right d-block d-md-none">
+                        <span class="text-primary">Issued: September 2019</span>
+                    </div>
+                    <p class="flav-text">Credential ID: V4QNRYYFLKB4 &middot; No Expiration</p>
+                </div>
+                <div class="resume-date text-md-left d-none d-md-block">
+                    <span class="text-primary">Issued: September 2019</span>
+                </div>
+            </div>
+
+            <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+                <div class="resume-content col-md-8 order-md-last">
+                    <h3 class="mb-0">Responsive Website Basics: Code with HTML, CSS, and JavaScript</h3>
+                    <div class="subheading">Coursera &middot; University of London, Goldsmiths</div>
+                    <div class="resume-date text-md-right d-block d-md-none">
+                        <span class="text-primary">Issued: September 2019</span>
+                    </div>
+                    <p class="flav-text">Credential ID: HH58KMNZXV3V &middot; No Expiration</p>
+                </div>
+                <div class="resume-date text-md-left d-none d-md-block">
+                    <span class="text-primary">Issued: September 2019</span>
                 </div>
             </div>
 
@@ -321,7 +349,7 @@
                             <i class="fas fa-map-marked-alt text-primary mb-2"></i>
                             <h4 class="text-uppercase m-0">Location</h4>
                             <hr class="my-4">
-                            <div class="small text-black-50">Austin, TX</div>
+                            <div class="small text-black-50">Austin, TX, USA</div>
                         </div>
                     </div>
                 </div>
