--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">Tihani Celeketic</a>
+            <a class="navbar-brand js-scroll-trigger" href="#page-top">
+                <i class="fab fa-fort-awesome fa-2x"></i>
+            </a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
                 <i class="fas fa-bars"></i>
@@ -64,7 +66,14 @@
                 </div>
                 <div class="col-12"><p><br></p></div>
                 <div class="mx-auto text-center">
-                    <h2 class="text-white-50 mt-2 mb-5">Tasteful. Intuitive. Honest. Adaptable. <span title="Just coming into existence and beginning to display signs of future potential.">Nascent</span>. Ingenuitive.</h2>
+                    <h2 class="text-white-50 mt-2 mb-5">
+                        <span title="Showing good aesthetic judgment or appropriate behavior">Tasteful. </span>
+                        <span title="Using or based on what one feels to be true; instinctive">Intuitive. </span>
+                        <span title="Fairly earned, especially through hard work.">Honest. </span>
+                        <span title="Able to adjust oneself readily to different conditions:">Adaptable. </span>
+                        <span title="Just coming into existence and beginning to display signs of future potential.">Nascent</span>.
+                        <span title="The ability to solve difficult problems, often in original, clever, and inventive ways.">Ingenuitive.</span>
+                    </h2>
                 </div>
             </div>
         </div>
@@ -75,16 +84,16 @@
 
   <!-- About Section -->
     <section id="about" class="about-section">
-        <div class="container">
-            <div class="row">
+        <div class="container align-items-center">
+            <div class="row h-100 align-items-center">
                 <div class="col-12 section-title">
                     <h2 class="text-center">Get to know me</h2>
                 </div>
                 <div class="col-md-10 mx-auto">
                     <div class="text-left">
-                        <p class="mb-3">A budding Web Developer, aspiring Design Technologist (or [ insert your term for design-development mediator here ]) and future Artificial Intelligence / Machine Learning Engineer.</p>
-                        <p class="mb-3"> I started off pursuing graphic and game design, decided to try a different approach and found myself (double entendre) in mechanical engineering which finally led me to discovering my <span class="strike-that">obsession</span> love for machine learning and artificial intelligence.</p>
-                        <p>I take pride in a nuanced understanding of the human psyche, respectable design skills, a passion for creation and innovation and above all else, <strong>kindness</strong> to fellow inhabitants of Earth.</p>
+                        <p>I am a motivated and talented web designer looking to gain professional experience and start a career in the industry. Exceptionally skilled with bending HTML to my will with my powers of CSS and a touch a JavaScript. Experienced in communication, keeping deadlines, creating schedules, making appointments, and providing clients with optimal customer service. An adaptive team player with 4+ years of experience working in teams. Good-humored with a passion for good coffee and satisfied clients. Currently working on my degree in computer science with a focus in artificial intelligence and machine learning through a distance learning program offered by the University of London (online with tests taken at approved testing centers).</p>
+
+                        <p>My biggest passions are accessible and sustainable technology, fantastical user experience and kindness to one's fellow Earth inhabitants.</p>
                     </div>
                 </div>
             </div>
@@ -96,58 +105,95 @@
         <div class="container">
             <!-- Work Expereince -->
             <div class="row">
-                <div class="col-12 section-title">
-                    <h1 class="text-center">Experience</h1>
-                </div>
-            </div>
-            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                <div class="col-md-8">
-                    <h3 class="mb-0">Technician II</h3>
-                    <div class="subheading">Uber Technologies</div>
-                    <div class="text-md-right d-block d-md-none">
-                        <span class="text-primary">October 2018 - Present</span>
-                    </div>
-                    <div class="mt-3">
-                        <p class=" flav-text">Experienced using various tools and programs to update / troubleshoot firmware and perform physical repairs and upgrades to a fleet of 5000+ electric mobility devices.</p>
-                    </div>
-                </div>
-                <div class="text-md-right d-none d-md-block">
-                    <span class="text-primary">October 2018 - Present</span>
-                </div>
-            </div>
+                <div class="col-12">
+                    <h1 class="text-center mb-5">Relevant Experience</h1>
 
-            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                <div class="col-md-8">
-                    <h3 class="mb-0">Main Teller</h3>
-                    <div class="subheading">Ko'olau Federal Credit Union</div>
-                    <div class="text-md-right d-block d-md-none">
-                        <span class="text-primary">March 2018 - September 2018</span>
-                    </div>
-                    <div class="mt-3">
-                        <p class="flav-text">Head teller of main branch experienced in leveraging account and document management programs.</p>
-                    </div>
-                </div>
-                <div class="text-md-right d-none d-md-block">
-                    <span class="text-primary">March 2018 - September 2018</span>
-                </div>
-            </div>
+                    <div id="accordion">
+                        <!-- Work Experience 1 -->
+                        <div class="card">
+                            <div class="card-header" id="job1">
+                                <div class="row justify-content-around see-btn align-items-center" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                    <div class="col-md-8 exp-link pointer p-2 text-center text-md-left">
+                                        <h3 class="mb-0 ml-2">Technician II</h3>
+                                        <span class="subheading ml-3">Uber Technologies</span>
+                                    </div>
+                                    <div class="text-center d-md-block">
+                                        <span class="text-primary">October 2018 - Present</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div id="collapseOne" class="collapse show" aria-labelledby="job1" data-parent="#accordion">
+                                <div class="card-body">
+                                    <ul class="flav-text mt-2">
+                                        <li>Demonstrated excellent mechanical knowledge of machines and tools, including design, use, repair, and maintenance.</li>
+                                        <li>Executed routine maintenance and firmware updates on a fleet of 5000+ electric mobility devices.</li>
+                                        <li>Communicated product and machine failure details to management team and quality assurance departments.</li>
+                                        <li>Inspected equipment and systems to identify issues and reported new problems to team.</li>
+                                        <li>Delivered knowledge of design techniques, tools, and principles involved in production by writing Standard Operating Procedures.</li>
+                                        <li>Consistently adhered to applicable regulations, policies and procedures for health, safety and environmental compliance.</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Work Experience 2 -->
+                        <div class="card">
+                            <div class="card-header" id="job2">
+                                <div class="row justify-content-around see-btn align-items-center" data-toggle="collapse" data-target="#collapse2" aria-expanded="true" aria-controls="collapse2">
+                                    <div class="col-md-8 exp-link pointer p-2 text-center text-md-left">
+                                        <h3 class="mb-0 ml-4">Main Teller</h3>
+                                        <span class="subheading ml-4">Ko'olau Federal Credit Union</span>
+                                    </div>
+                                    <div class="text-md-right d-block align-items-center">
+                                        <span class="text-primary">March 2018 - September 2018</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div id="collapse2" class="collapse" aria-labelledby="job2" data-parent="#accordion">
+                                <div class="card-body">
+                                    <ul class="flav-text mt-2">
+                                        <li>Performed basic administrative tasks such as handling phone calls, inquiries, and emails, regarding banking products.</li>
+                                        <li>Maintained optimal financial controls by securing funds and making accurate transactions.</li>
+                                        <li>Promoted facility security by monitoring customer behaviors and following established protocols to protect individuals and assets.</li>
+                                        <li>Helped customers open and close accounts, apply for loans and make sound financial decisions.</li>
+                                        <li>Handled cash transactions, balanced cash drawers, and issued cashier's checks.</li>
+                                        <li>Conducted special service and account transactions for customers, including ordering checks and placing stop payment orders.</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Work Experience 3 -->
+                        <div class="card">
+                            <div class="card-header" id="job3">
+                                <div class="row justify-content-around see-btn align-items-center" data-toggle="collapse" data-target="#collapse3" aria-expanded="true" aria-controls="collapse3">
+                                    <div class="col-md-8 exp-link pointer p-2 text-center text-md-left">
+                                        <h3 class="mb-0 ml-3">Administrative Assistant</h3>
+                                        <span class="subheading ml-3">Laura Paris Photography</span>
+                                    </div>
+                                    <div class="text-md-right d-block align-items-center">
+                                        <span class="text-primary">March 2017 - April 2018</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div id="collapse3" class="collapse" aria-labelledby="job3" data-parent="#accordion">
+                                <div class="card-body">
+                                    <ul class="flav-text mt-2">
+                                        <li>Coordinated project materials, including managing physical and digital files, monitoring spreadsheets and updating reports.</li>
+                                        <li>Performed troubleshooting, maintenance, and updates for office systems.</li>
+                                        <li>Executed administrative tasks, including filing, answering phones and retrieving documents.</li>
+                                        <li>Processed financial documents including contracts, expense reports, and invoices.</li>
+                                        <li>Tracked expenses, documented records and coordinated marketing campaigns using 17Hats.</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
 
-            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                <div class="col-md-8">
-                    <h3 class="mb-0">Marketing & Administrative Assistant</h3>
-                    <div class="subheading">Laura Paris Photography</div>
-                    <div class="text-md-right d-block d-md-none">
-                        <span class="text-primary">March 2017 - April 2018</span>
+
                     </div>
-                    <div class="mt-3 flav-text">
-                        <p>One woman administration leveraging a suite of software as well as superb organizational and communication skills to help this boutique photography studio flourish.</p>
-                    </div>
-                </div>
-                <div class="text-md-right d-none d-md-block">
-                    <span class="text-primary">March 2017 - April 2018</span>
+                    <!-- END Accordion -->
                 </div>
             </div>
             <!-- Add portfolio code below here-->
+
         </div>
     </section>
 
@@ -185,7 +231,7 @@
                     <div class="text-md-right d-block d-md-none">
                         <span class="text-primary">Issued: September 2019</span>
                     </div>
-                    <p class="flav-text mt-3">Credential ID: V4QNRYYFLKB4 &middot; No Expiration</p>
+                    <p class="flav-text mt-3">Credential ID: <a href="https://www.coursera.org/account/accomplishments/certificate/V4QNRYYFLKB4" target="_blank">V4QNRYYFLKB4</a> &middot; No Expiration</p>
                 </div>
                 <div class="text-md-left d-none d-md-block">
                     <span class="text-primary">Issued: September 2019</span>
@@ -194,29 +240,15 @@
 
             <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                 <div class="col-md-8 order-md-last">
-                    <h3 class="mb-0">Responsive Website Basics: Code with HTML, CSS, and JavaScript</h3>
+                    <h3 class="mb-0">Responsive Website Basics: HTML, CSS, and JavaScript</h3>
                     <div class="subheading">Coursera &middot; University of London, Goldsmiths</div>
                     <div class="text-md-right d-block d-md-none">
                         <span class="text-primary">Issued: September 2019</span>
                     </div>
-                    <p class="flav-text mt-3">Credential ID: HH58KMNZXV3V &middot; No Expiration</p>
+                    <p class="flav-text mt-3">Credential ID: <a href="https://www.coursera.org/account/accomplishments/certificate/HH58KMNZXV3V" target="_blank">HH58KMNZXV3V</a> &middot; No Expiration</p>
                 </div>
                 <div class="text-md-left d-none d-md-block">
                     <span class="text-primary">Issued: September 2019</span>
-                </div>
-            </div>
-
-            <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                <div class="col-md-8 order-md-last">
-                    <h3 class="mb-0">Myron B. Thompson Academy</h3>
-                    <div class="subheading">High School Diploma</div>
-                    <div class="text-md-right d-block d-md-none">
-                        <span class="text-primary">August 2006 - July 2007</span>
-                    </div>
-                    <p class=""></p>
-                </div>
-                <div class="text-md-left d-none d-md-block">
-                    <span class="text-primary">August 2006 - July 2007</span>
                 </div>
             </div>
 
@@ -286,10 +318,10 @@
                             Mobile-First, Responsive Design</li>
                         <li>
                             <i class="fa-li fa fa-check"></i>
-                            Cross Browser Testing &amp; Debugging</li>
+                            Cross Functional Teams</li>
                         <li>
                             <i class="fa-li fa fa-check"></i>
-                            Cross Functional Teams</li>
+                            Cross Browser Testing &amp; Debugging</li>
                     </ul>
                 </div>
             </div>
